  checks to see if an instrument already exists.  Thanks to Charlie Friedemann
  for the patch.

* load.instruments() gains an "identifier_cols" argument that can be used to
  pass the names of columns that are to be used as identifiers instead of as
  normal instrument attributes.  Thanks to Charlie Friedemann for the patch.


BUG FIXES
---------

* setSymbolLookup.FI was appending the Symbol to the directory, and 
  getSymbols.FI was only adding the Symbol to the file path if the end of the 
  path was not the same as the Symbol.  That meant that getSymbols.FI could not
  be used to get data for a Symbol that was the same as the base directory.
  getSymbols.FI now always appends the Symbol to the file path and 
  setSymbolLookup.FI does not append it to the base_dir. Test added.

* In redenominate, if the object was a defined instrument, the currency in the
  instrument object would be used even if the user passed a different currency
  in the old_base argument.  

* sort_ids() only worked in some locales when an instrument is not defined.  It 
  now converts the month (returned by parse_id()) to numeric (with MC2N()) and 
  uses the "%m" format in the as.Date call instead of using the month name with 
  the (locale-specific) "%b" format.  Thanks to Alexis Petit for the patch.

* when instrument() wrappers were called with vectors of symbols and 
  assign_i=FALSE, the symbols were being returned instead of the instrument
  objects.  Now, when `assign_i=FALSE` and `length(primary_id) > 1`, a 
  named list of instruments will be returned.  Named lists of instruments are 
  easy to work with since they can be passed directly to (re)loadInstruments(), 
  or coerced to an environment with as.environment()


TESTS
-----

* Now using testthat for package testing


Changes in Version 1.1
======================

NEW FEATURES
------------

* sort.instrument() method to sort the components of an instrument
